@@ -17,6 +17,7 @@
 
 from django.db import models
 from django.conf import settings
+from django.core.urlresolvers import reverse
 from django.contrib.sites.models import Site
 from raptiye.tags.models import Tag
 
@@ -38,29 +39,32 @@ class Entry(models.Model):
 	published = models.BooleanField(u"Published", default=False)
 	comments_enabled = models.BooleanField(u"Comments Enabled", default=True)
 	slug = models.SlugField(u"URL", max_length=100)
-
+	
 	def __unicode__(self):
 		return self.title
-
+	
 	def published_comments(self):
 		"Returns the published comments"
 		return self.comments.filter(published=True).order_by("datetime")
+	
+	def get_relative_url(self):
+		return "%s%s/%s/" % (reverse("blog"), self.datetime.strftime("%Y/%m/%d"), self.slug)
 	
 	def get_full_url(self):
 		site_url = Site.objects.get_current().domain
 		dt = self.datetime
 		if self.sticky == True:
 			return ""
-		return "http://%s/blog/%s/%s/" % (site_url, self.datetime.strftime("%Y/%m/%d"), self.slug)
+		return "http://%s%s" % (site_url, self.get_relative_url())
 	
 	def get_datetime(self):
 		return self.datetime.strftime("%d.%m.%Y @ %H:%M")
-
+	
 	get_datetime.short_description = "Event Published On"
-
+	
 	def get_entry_url(self):
 		site_url = Site.objects.get_current().domain
-		entry_url = "http://%s/blog/%s/%s/" % (site_url, self.datetime.strftime("%Y/%m/%d"), self.slug)
+		entry_url = self.get_full_url()
 		if self.sticky == True:
 			return ""
 		return "<a href='%s' title='Click here to read the entry..' target='_blank'>%s</a>" % (entry_url, entry_url)
@@ -68,14 +72,20 @@ class Entry(models.Model):
 	get_entry_url.short_description = "URL of Entry"
 	get_entry_url.allow_tags = True
 	get_entry_url.admin_order_field = "-datetime"
-
+	
 	def delete_entry(self):
 		url = "/admin/%s/%s/%s/delete/" % (self._meta.app_label, self._meta.module_name, self.id)
 		return "<a href='%s' title='Click here to delete this entry'>Delete This Entry</a>" % url
 	
 	delete_entry.short_description = ""
 	delete_entry.allow_tags = True
-
+	
+	def get_previous_post(self):
+		return Entry.objects.filter(published=True, id__lt=self.id).latest()
+	
+	def get_next_post(self):
+		return Entry.objects.filter(published=True, id__gt=self.id).reverse().latest()
+	
 	class Meta:
 		get_latest_by = "datetime"
 		ordering = ["title"]
